ddm items visibility fixed

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -84,6 +84,7 @@ header {
 
 
 .dropdown--list li {
+    visibility: hidden;
     text-decoration: none;
     opacity: 0;
     list-style: none;
@@ -94,7 +95,7 @@ header {
 }
 
 .activate-links {
-    visibility: visible;
+    visibility: visible!important;
     opacity: 1!important;
 
 }
